# prism_dev

./: .gitignore  README.md  docker-compose.yml  exec_demo.sh  generate_evidence.sh  push_origin.sh  run_tests.py  test_cli.py
PRISM/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
PRISM/docs/: PRISM_Simulator_Manual.md  architecture.md  heuristics.md  proto.md  taxonomy.md  testing.md
PRISM/include/: prism.hpp
PRISM/src/: main.cpp
PRISM/src/alert/: alert_system.cpp
PRISM/src/capture/: pcap.cpp
PRISM/src/detection/: burst.cpp  hst.cpp
PRISM/src/enforcement/: enforcer.cpp
PRISM/src/feature/: feat_miner.cpp
PRISM/src/parser/: dnp3_parser.cpp  flow_table.cpp  iec104_parser.cpp  modbus_parser.cpp  proto_classifier.cpp
PRISM/src/risk/: risk_model.cpp
PRISM/src/simulator/core/: cli.cpp
PRISM/src/simulator/proto/dnp3/: client.cpp
PRISM/src/simulator/proto/iec104/: client.cpp  server.cpp
PRISM/src/simulator/proto/modbus/: client.cpp  common.hpp  server.cpp
PRISM/src/utils/: logger.cpp  types.cpp  viz_utils.cpp
PRISM/src/window/: window_manager.cpp
PRISM_simulator/: CMakeLists.txt  Dockerfile
PRISM_simulator/api/: go.mod  main.go
PRISM_simulator/hmi/: Dockerfile
PRISM_simulator/proto/dnp3/: client.cpp  server.cpp
PRISM_simulator/proto/iec104/: client.cpp
PRISM_simulator/proto/modbus/: client.cpp  common.hpp  server.cpp
docs/: quickstart.md  theory.md
